[package]
name = "hop-store-firestore"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "Durable per-node Hop Store backed by Firestore (survives scale-to-zero, DESIGN.md §19/§21)."

[dependencies]
hop-core.workspace = true
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
