# --- injected for the standalone mirror by tools/copybara/copy.bara.sky ---
[workspace]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/hopmesh/hop"

[workspace.dependencies]
hop-core = "0.0.1"
hop-endpoint-core = "0.0.1"
hop-store-sqlite = { version = "0.0.1", default-features = false }
hop-store-firestore = "0.0.1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
sha2 = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
miniz_oxide = "0.9"
snow = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
# --- end injected preamble ---
[package]
name = "hop-store-firestore"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "Durable per-node Hop Store backed by Firestore (survives scale-to-zero, DESIGN.md §19/§21)."

[dependencies]
hop-core.workspace = true
serde_json = "1"
base64 = "0.22"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
